# portkey-ai-evolv

./: .env.example  .gitignore  ARCHITECTURE.md  DEDUP_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  IMPLEMENTATION.md  INGESTION_DESIGN.md  ML_CORE_ALGORITHM_GUIDE.md  Makefile  PROJECT_PLAN.md  QUICKSTART.md  README.md  SETUP.md  check_setup.py  ingestion_state.json  pyproject.toml  render.yaml  requirements.txt
apps/api/: __init__.py  main.py
apps/cli/: __init__.py  main.py
apps/web/: .env.example  README.md  next.config.js  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/docs/: page.tsx
apps/web/app/families/: page.tsx
apps/web/app/families/[id]/: page.tsx
apps/web/app/logs/: page.tsx
apps/web/app/prompts/: page.tsx
apps/web/app/prompts/[id]/: page.tsx
apps/web/components/: ConnectionTest.tsx  ErrorDisplay.tsx  JsonViewer.tsx  LiveLogs.tsx  LogDetailDialog.tsx  LogGenerator.tsx  Logo.tsx
apps/web/components/ui/: badge.tsx
apps/web/config/: index.ts
apps/web/lib/: api.ts  portkey.ts
apps/web/public/: mock-prompts.json
apps/web/types/: log.ts
docs/: database-integration.md
examples/: prompt.csv  prompts_example.csv
infra/: Dockerfile  docker-compose.yml
scripts/: init_db.py  verify_setup.py
